# dfm-processing

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
config/: example.yaml
src/dfm_processing/: __init__.py  document_cli.py  pipeline_cli.py
src/dfm_processing/data_pipeline/: cluster.py  config.py  deduplication.py  pipeline.py  utils.py
src/dfm_processing/data_pipeline/components/: reader.py  writer.py
src/dfm_processing/document_processing/: processors.py  utils.py
src/scripts/: pull_cvr.py  pull_plandata.py
tests/: __init__.py  conftest.py  test_processors.py
tests/cli/: __init__.py  test_document_cli.py  test_pipeline_cli.py
tests/data_pipeline/: __init__.py  test_cluster.py  test_config.py  test_pipeline.py
tests/document_processing/: __init__.py  test_processors.py  test_utils.py
